# AEGIS

./: .gitignore  CLAUDE.md  README.md  app.py  requirements.txt
be/: bulk_downloader_docs.py  main.py  mcp_server.py  models.py  queries.py  requirements-dev.txt  requirements.txt
be/tests/: conftest.py  test_endpoints.py  test_mcp.py  test_models.py  test_queries.py
docs/: aegis-ingestion-prompt.md  mcp.md
docs/superpowers/plans/: 2026-03-31-maps-facets-sample-detail.md  2026-05-18-mcp-server.md
docs/superpowers/specs/: 2026-03-31-maps-facets-sample-detail-design.md  2026-05-18-mcp-server-design.md
downloader/: README.md  pyproject.toml
downloader/src/aegis_downloader/: __main__.py  api_client.py  cli.py  downloader.py  extractors.py  manifest.py  models.py  planner.py
downloader/tests/: conftest.py  test_api_client.py  test_cli.py  test_downloader.py  test_extractors.py  test_manifest.py  test_planner.py  test_smoke.py
downloader/tests/fixtures/: data_portal_43171.json
fe/: Dockerfile  app.py  requirements.txt
fe/assets/: cookie-consent.js  custom.css  hero-network.js  styles.css
fe/pages/: about.py  api.py  bulk_download.py  data_portal.py  data_portal_details.py  home.py  mcp.py  sample_details.py  utils.py
pages/: about.py  api.py  data_portal.py  home.py
