[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-downloader"
version = "0.1.0"
description = "Bulk-download CLI and library for the AEGIS data portal"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "AEGIS" }]
dependencies = [
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
aegis-download = "aegis_downloader.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_downloader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
